--- a/mod2_solution.css
+++ b/mod2_solution.css
@@ -8,8 +8,7 @@ div{background-color: #999999;
     
     border: 2px solid black;
     box-sizing: border-box;
-    width: 400px;
-    margin:10px;
+    
 }
 
 h2{background-color:#D59898;
@@ -28,17 +27,20 @@ p{
 }
 
 @media (min-width: 992px){
-    div{float:left;}
+    div{width:30%;
+        float:left;
+        margin: 1%}
 }
 
 @media(min-width:768px) and (max-width:991px){
-    div{float:left;}
-    #div1{width:810px;}
+    div{float:left;
+        width: 45%;
+        margin:1%}
+    #div1{width:92%;}
 
 }
 
 @media(max-width:767px){
-    div{clear:left}
-    
+    div{margin-bottom: 2%;}
 
 }
